--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -1,16 +1,24 @@
-name: Java Code Coverage
-
+name: Coverage
 on:
-  push:
-    branches: [ "main" ]
   pull_request:
-    branches: [ "main" ]
-
+    types: [opened, reopened, synchronize]
+  push:
+    branches: [main]
 jobs:
-  codcov:
+  calculate-coverage:
     runs-on: ubuntu-latest
     steps:
-    - name: Upload coverage reports to Codecov
-      uses: codecov/codecov-action@v3
-      env:
-        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+      - uses: actions/checkout@master
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          java-version: "11"
+          distribution: "adopt"
+          cache: "maven"
+      - name: Generate coverage report
+        run: mvn -B test -T 2C --file pom.xml
+      - name: Upload to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          fail_ci_if_error: true
+          verbose: true
