--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -16,7 +16,7 @@ jobs:
           distribution: "adopt"
           cache: "maven"
       - name: Generate coverage report
-        run: mvn -B test -T 2C --file pom.xml
+        run: mvn -B test --file pom.xml
       - name: Upload to Codecov
         uses: codecov/codecov-action@v3
         with:
