--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,11 @@
             <version>2.15.2</version>
         </dependency>
         <dependency>
+            <groupId>com.github.lalyos</groupId>
+            <artifactId>jfiglet</artifactId>
+            <version>0.0.9</version>
+        </dependency>
+        <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <version>5.5.0</version>
