--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
 log4j.rootLogger=INFO, console
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
-log4j.appender.console.layout.ConversionPattern=%d{YYYY-MM-dd HH:mm:ss,SSS} %-5p [%t] %c %x - %m%n
+log4j.appender.console.layout.ConversionPattern=%d{YYYY-MM-dd HH:mm:ss,SSS} %-5p [%t] %c:%L %x - %m%n
