--- a/src/main/resources/native-image/resource-config.json
+++ b/src/main/resources/native-image/resource-config.json
@@ -3,7 +3,7 @@
   "includes":[{
     "pattern":"\\QMETA-INF/services/org.slf4j.spi.SLF4JServiceProvider\\E"
   }, {
-    "pattern":"\\Qlog4j.properties\\E"
+    "pattern":"\\Qlogback.xml\\E"
   }, {
     "pattern":"\\Qstandard.flf\\E"
   }, {
