--- a/pom.xml
+++ b/pom.xml
@@ -180,6 +180,8 @@
                             <goal>jar</goal>
                         </goals>
                         <configuration>
+                            <source>11</source>
+                            <taglet>11</taglet>
                             <includeDependencySources>true</includeDependencySources>
                             <dependencySourceIncludes>
                                 <dependencySourceInclude>${project.groupId}:*</dependencySourceInclude>
