--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,8 +17,10 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
-
+    runs-on: ${{matrix.os}}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest]
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 11
