--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>prometheus.exporter</groupId>
     <artifactId>jgc_exporter</artifactId>
-    <version>0.4.1</version>
+    <version>0.4.2-snapshot</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
